# AdventOfCode2024

./: .gitignore
day1/: CMakeLists.txt
day1/src/: day1.cpp
day2/: CMakeLists.txt
day2/src/: day2.cpp
day3/: CMakeLists.txt
day3/src/: day3.cpp
day4/: CMakeLists.txt
day4/src/: day4.cpp
day5/: CMakeLists.txt
day5/src/: day5.cpp
day6/: CMakeLists.txt
day6/src/: day6.cpp
day7/: CMakeLists.txt
day7/src/: day7.cpp
